오류 수정